[Work in progress] task #3

--- a/classworks/maxim-shpak/03_git/sidebar.html
+++ b/classworks/maxim-shpak/03_git/sidebar.html
@@ -57,8 +57,8 @@
             </li>
         </ul>
     </div>
-    <main class="content">
-        <div class="intro">
+    <main class="content-list">
+        <div class="content-list__element intro">
             <div class="intro-text-block">
                 <p class="intro-text-block__element--large">Hi! I'm
                     <span class="text--light">Prologue</span>, a
@@ -70,10 +70,10 @@
             </div>
             <button class="rounded-button">Magna Aliquam</button>
         </div>
-        <div class="portfolio">
-            <div class="pretty-text">
-                <p class="pretty-text--large">Portfolio</p>
-                <p class="pretty-text--small">Vitae natoque dictum etiam semper magnis enim feugiat convallis egestat rhoncus ridiculus in quis risus amet
+        <div class="content-list__element portfolio">
+            <div class="pretty-text-block">
+                <p class="pretty-text-block__element--large">Portfolio</p>
+                <p class="pretty-text-block__element">Vitae natoque dictum etiam semper magnis enim feugiat convallis egestat rhoncus ridiculus in quis risus amet
                     curabitor tempor orci penatibus. Tellus erat mauris ipsum fermentun etiam vivamus eget. Nunc nibh morbi
                     quis furse hendretir lacus ridiculus.</p>
             </div>
@@ -95,8 +95,8 @@
                 </div>
             </div>
         </div>
-        <div class="about"></div>
-        <div class="contact">
+        <div class="content-list__element about"></div>
+        <div class="content-list__element contact">
             <div class="pretty-text-block">
                 <p class="pretty-text-block__element--large">Contact</p>
                 <p class="pretty-text-block__element">Elementum sem parturient nulla quam placerat viverra mauris non cum elit tempus ullamcorpet dolor. Libero
