--- a/classworks/aliona-mozol/02_html/index.html
+++ b/classworks/aliona-mozol/02_html/index.html
@@ -3,8 +3,8 @@
 <head>
   <title>Prologue</title>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
-	<link rel="stylesheet" href="styles/font-awesome.min.css">
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+  <link rel="stylesheet" href="styles/font-awesome.min.css">
   <link rel="stylesheet" href="styles/styles.css">
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300" rel="stylesheet">
 </head>
@@ -19,7 +19,7 @@
         <img class="sidebar-avatar" src="styles/images/avatar.jpg"/>
         <div class="sidebar-profile-ident">
           <div class="sidebar-profile-name">
-            <strong>Aliona Mozol</strong>
+            Aliona Mozol
           </div>
           <div class="sidebar-profile-profession">
             Full-Stack Developer
@@ -56,13 +56,24 @@
 
     </div>
 
-    <div class="sidebar-bottom">
-      <i class="fa fa-twitter icon"></i>
-      <i class="fa fa-facebook icon"></i>
-      <i class="fa fa-github icon"></i>
-      <i class="fa fa-dribbble icon"></i>
-      <i class="fa fa-envelope icon"></i>
-    </div>
+
+    <ul class="sidebar-bottom">
+      <li class="sidebar-bottom-item">
+        <i class="fa fa-twitter icon"></i>
+      </li>
+      <li class="sidebar-bottom-item">
+        <i class="fa fa-facebook icon"></i>
+      </li>
+      <li class="sidebar-bottom-item">
+        <i class="fa fa-github icon"></i>
+      </li>
+      <li class="sidebar-bottom-item">
+        <i class="fa fa-dribbble icon"></i>
+      </li>
+      <li class="sidebar-bottom-item">
+        <i class="fa fa-envelope icon"></i>
+      </li>
+    </ul>
 
   </div>
 
@@ -70,69 +81,70 @@
 
     <div class="content intro" id="intro">
 
-      <div class="intro-header">
-        Hi! I'm <font>Prologue</font>, a <font>free</font> responsive
-        <br />site template
-        designed by <font>HTML5 UP</font>.
-      </div>
+      <h1 class="intro-header">
+        Hi! I'm <span class="intro-key-word">Prologue</span>,
+          a <span class="intro-key-word">free</span> responsive
+          site template
+          designed by <span class="intro-key-word">HTML5 UP</span>.
+      </h1>
       <div class="intro-text">
         Ligula scelerisque justo sem accumsan diam quis
-        <br />vitae natoque dictum sollicitudin elementum.
+        vitae natoque dictum sollicitudin elementum.
       </div>
       <button class="intro-button">Magna Aliquam</button>
     </div>
 
     <div class="content portfolio" id="portfolio">
-      <header class="content-header">
+      <h2 class="content-header">
         Portfolio
-      </header>
-      <div class="portfolio-text">
+      </h2>
+      <p class="portfolio-text">
         Vitae natoque dictum etiam semper magnis enim feugiat convallis
         convallis egestas rhoncus ridiculus in quis risus amet
         curabitur tempor orci penatibus. Tellus erat mauris ipsum
         fermentum etiam vivamus eget. Nunc nibh morbi quis fusce
         hendrerit lacus ridiculus.
-      </div>
+      </p>
       <div class="portfolio-all-cards">
         <div class="portfolio-cards">
           <div class="portfolio-card">
-            <img src="styles/images/pic02.jpg"/><p>Ipsum Feugiat</p>
+            <img class="portfolio-img" src="styles/images/pic02.jpg"/><p>Ipsum Feugiat</p>
           </div>
           <div class="portfolio-card">
-            <img src="styles/images/pic03.jpg"/><p>Rhoncus Semper</p>
-          </div>
-        </div>
-        <div class="portfolio-cards">
-          <div class="portfolio-card">
-            <img src="styles/images/pic04.jpg"/><p>Magna Nullam</p>
+            <img class="portfolio-img" src="styles/images/pic03.jpg"/><p>Rhoncus Semper</p>
           </div>
         </div>
         <div class="portfolio-cards">
           <div class="portfolio-card">
-            <img src="styles/images/pic05.jpg"/><p>Dolor Penatibus</p>
+            <img class="portfolio-img" src="styles/images/pic04.jpg"/><p>Magna Nullam</p>
+          </div>
+        </div>
+        <div class="portfolio-cards">
+          <div class="portfolio-card">
+            <img class="portfolio-img" src="styles/images/pic05.jpg"/><p>Dolor Penatibus</p>
           </div>
           <div class="portfolio-card">
-            <img src="styles/images/pic06.jpg"/><p>Orci Convallis</p>
+            <img class="portfolio-img" src="styles/images/pic06.jpg"/><p>Orci Convallis</p>
           </div>
         </div>
       </div>
     </div>
     <div class="content about-me" id="about-me">
-      <header class="content-header">
+      <h2 class="content-header">
         About Me
-      </header>
+      </h2>
     </div>
     <div class="content contact" id="contact">
-      <header class="content-header">
+      <h2 class="content-header">
         Contact
-      </header>
-      <div class="contact-text">
+      </h2>
+      <p class="contact-text">
         Elementum sem parturient nulla quam placerat viverra mauris non
          cum elit tempus ullamcorper dolor. Libero rutrum ut lacinia
           donec curae mus. Eleifend id porttitor ac ultricies lobortis
            sem nunc orci ridiculus faucibus a consectetur. Porttitor
            curae mauris urna mi dolor.
-      </div>
+      </p>
       <div class="contact-inputs">
         <input class="contact-input" placeholder="Name"/>
         <input class="contact-input" placeholder="Email"/>
