[+] Add responsive design

--- a/classworks/aliona-mozol/03_html_BEM/prologue_update/src/index.html
+++ b/classworks/aliona-mozol/03_html_BEM/prologue_update/src/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -11,7 +12,7 @@
 </head>
 
 <body>
-
+<!--
 <div class="page-text">
   <div class="sidebar">
     <div class="details-wrap">
@@ -157,6 +158,355 @@
   </main>
 
 </div>
+-->
+
+
+
+<div class="page">
+  <div class="sidebar">
+    <div class="details-wrap">
+      <div class="profile">
+        <img class="profile__avatar" src="images/avatar.jpg"/>
+        <div class="profile-info">
+          <div class="profile-info__name">
+            Aliona Mozol
+          </div>
+          <div class="profile-info__profession">
+            Full-Stack Developer
+          </div>
+        </div>
+      </div>
+      <nav class="nav">
+        <div class="nav-item">
+          <a href="#intro" class="nav-item__link">
+            <i class="fa fa-home nav-item__icon"></i>
+            Intro
+          </a>
+        </div>
+        <div class="nav-item">
+          <a href="#portfolio" class="nav-item__link">
+              <i class="fa fa-th nav-item__icon"></i>
+              Portfolio
+            </a>
+        </div>
+        <div class="nav-item">
+          <a href="#about-me" class="nav-item__link">
+            <i class="fa fa-user nav-item__icon"></i>
+            About Me
+          </a>
+        </div>
+        <div class="nav-item">
+          <a href="#contact" class="nav-item__link">
+            <i class="fa fa-envelope nav-item__icon"></i>
+            Contact
+          </a>
+        </div>
+      </nav>
+    </div>
+    <ul class="social-networks-list">
+      <li class="social-networks-list__item">
+        <i class="fa fa-twitter social-networks-list__icon"></i>
+      </li>
+      <li class="social-networks-list__item">
+        <i class="fa fa-facebook social-networks-list__icon"></i>
+      </li>
+      <li class="social-networks-list__item">
+        <i class="fa fa-github social-networks-list__icon"></i>
+      </li>
+      <li class="social-networks-list__item">
+        <i class="fa fa-dribbble social-networks-list__icon"></i>
+      </li>
+      <li class="social-networks-list__item">
+        <i class="fa fa-envelope social-networks-list__icon"></i>
+      </li>
+    </ul>
+  </div>
+
+  <main class="main">
+    <div class="content intro" id="intro">
+      <div class="intro__text-wrap">
+        <h1 class="intro__title">
+          Hi! I'm <span class="intro__key-word">Prologue</span>,
+          a <span class="intro__key-word">free</span> responsive
+          site template
+          designed by <span class="intro__key-word">HTML5 UP</span>.
+        </h1>
+        <div class="intro__description">
+          Ligula scelerisque justo sem accumsan diam quis
+          vitae natoque dictum sollicitudin elementum.
+        </div>
+      </div>
+      <button class="intro__button button">Magna Aliquam</button>
+    </div>
+    <div class="content portfolio" id="portfolio">
+      <h2 class="content__header">
+        Portfolio
+      </h2>
+      <p class="content__text">
+        Vitae natoque dictum etiam semper magnis enim feugiat convallis
+        convallis egestas rhoncus ridiculus in quis risus amet
+        curabitur tempor orci penatibus. Tellus erat mauris ipsum
+        fermentum etiam vivamus eget. Nunc nibh morbi quis fusce
+        hendrerit lacus ridiculus.
+      </p>
+      <div class="portfolio-cards">
+        <div class="portfolio-cards__wrap">
+          <div class="portfolio-cards__item">
+            <img src="images/pic02.jpg" class="portfolio-cards__img"/>
+            <p class="portfolio-cards__title">Ipsum Feugiat</p>
+          </div>
+          <div class="portfolio-cards__item">
+            <img src="images/pic03.jpg" class="portfolio-cards__img"/>
+            <p class="portfolio-cards__title">Rhoncus Semper</p>
+          </div>
+        </div>
+        <div class="portfolio-cards__wrap">
+          <div class="portfolio-cards__item">
+            <img src="images/pic04.jpg" class="portfolio-cards__img"/>
+            <p class="portfolio-cards__title">Magna Nullam</p>
+          </div>
+        </div>
+        <div class="portfolio-cards__wrap">
+          <div class="portfolio-cards__item">
+            <img src="images/pic05.jpg" class="portfolio-cards__img"/>
+            <p class="portfolio-cards__title">Dolor Penatibus</p>
+          </div>
+          <div class="portfolio-cards__item">
+            <img src="images/pic06.jpg" class="portfolio-cards__img"/>
+            <p class="portfolio-cards__title">Orci Convallis</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="content about-me" id="about-me">
+      <h2 class="content__header">
+        About Me
+      </h2>
+      <img class="about-me__img" src="images/pic08.jpg" />
+      <p class="content__text">
+        Tincidunt eu elit diam magnis pretium accumsan etiam id urna.
+        Ridiculus ultricies curae quis et rhoncus velit.
+        Lobortis elementum aliquet nec vitae laoreet eget cubilia quam
+        non etiam odio tincidunt montes. Elementum sem parturient nulla
+        quam placerat viverra mauris non cum elit tempus ullamcorper dolor.
+        Libero rutrum ut lacinia donec curae mus vel quisque sociis nec
+        ornare iaculis.
+      </p>
+
+
+    </div>
+    <div class="content contact" id="contact">
+      <h2 class="content__header">
+        Contact
+      </h2>
+      <p class="content__text">
+        Elementum sem parturient nulla quam placerat viverra mauris non
+         cum elit tempus ullamcorper dolor. Libero rutrum ut lacinia
+          donec curae mus. Eleifend id porttitor ac ultricies lobortis
+           sem nunc orci ridiculus faucibus a consectetur. Porttitor
+           curae mauris urna mi dolor.
+      </p>
+      <form class="contact-form">
+        <div class="contact-form__inputs">
+          <input class="contact-form__input" placeholder="Name"/>
+          <input class="contact-form__input" placeholder="Email"/>
+        </div>
+        <textarea class="contact-form__textarea" placeholder="Message"></textarea>
+        <button class="contact__button button">Send Message</button>
+      </form>
+
+    </div>
+  </main>
+</div>
+
+
+
+
 
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+<!--
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Prologue</title>
+  <meta http-equiv="Content-type" content="text/html; charset=utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300"
+  rel="stylesheet">
+  <link rel="stylesheet" href="styles/base/font-awesome.min.css">
+</head>
+
+<body>
+
+<div class="page">
+  <div class="sidebar">
+    <div class="details-wrap">
+      <div class="profile">
+        <img class="profile__avatar" src="images/avatar.jpg"/>
+        <div class="profile-info">
+          <div class="profile-info__name">
+            Aliona Mozol
+          </div>
+          <div class="profile-info__profession">
+            Full-Stack Developer
+          </div>
+        </div>
+      </div>
+      <nav class="nav">
+        <div class="nav-item">
+          <a href="#intro" class="nav-item__link">
+            <i class="fa fa-home nav-item__icon"></i>
+            Intro
+          </a>
+        </div>
+        <div class="nav-item">
+          <a href="#portfolio" class="nav-item__link">
+              <i class="fa fa-th nav-item__icon"></i>
+              Portfolio
+            </a>
+        </div>
+        <div class="nav-item">
+          <a href="#about-me" class="nav-item__link">
+            <i class="fa fa-user nav-item__icon"></i>
+            About Me
+          </a>
+        </div>
+        <div class="nav-item">
+          <a href="#contact" class="nav-item__link">
+            <i class="fa fa-envelope nav-item__icon"></i>
+            Contact
+          </a>
+        </div>
+      </nav>
+    </div>
+    <ul class="social-networks-list">
+      <li class="social-networks-list__item">
+        <i class="fa fa-twitter social-networks-list__icon"></i>
+      </li>
+      <li class="social-networks-list__item">
+        <i class="fa fa-facebook social-networks-list__icon"></i>
+      </li>
+      <li class="social-networks-list__item">
+        <i class="fa fa-github social-networks-list__icon"></i>
+      </li>
+      <li class="social-networks-list__item">
+        <i class="fa fa-dribbble social-networks-list__icon"></i>
+      </li>
+      <li class="social-networks-list__item">
+        <i class="fa fa-envelope social-networks-list__icon"></i>
+      </li>
+    </ul>
+  </div>
+
+  <main class="main">
+    <div class="content intro" id="intro">
+      <div class="intro__text-wrap">
+        <h1 class="intro__title">
+          Hi! I'm <span class="intro__key-word">Prologue</span>,
+          a <span class="intro__key-word">free</span> responsive
+          site template
+          designed by <span class="intro__key-word">HTML5 UP</span>.
+        </h1>
+        <div class="intro__description">
+          Ligula scelerisque justo sem accumsan diam quis
+          vitae natoque dictum sollicitudin elementum.
+        </div>
+      </div>
+      <button class="intro__button button">Magna Aliquam</button>
+    </div>
+    <div class="content portfolio" id="portfolio">
+      <h2 class="content__header">
+        Portfolio
+      </h2>
+      <p class="content__text">
+        Vitae natoque dictum etiam semper magnis enim feugiat convallis
+        convallis egestas rhoncus ridiculus in quis risus amet
+        curabitur tempor orci penatibus. Tellus erat mauris ipsum
+        fermentum etiam vivamus eget. Nunc nibh morbi quis fusce
+        hendrerit lacus ridiculus.
+      </p>
+      <div class="portfolio-cards">
+        <div class="portfolio-cards__wrap">
+          <div class="portfolio-cards__item">
+            <img src="images/pic02.jpg" class="portfolio-cards__img"/>
+            <p class="portfolio-cards__title">Ipsum Feugiat</p>
+          </div>
+          <div class="portfolio-cards__item">
+            <img src="images/pic03.jpg" class="portfolio-cards__img"/>
+            <p class="portfolio-cards__title">Rhoncus Semper</p>
+          </div>
+        </div>
+        <div class="portfolio-cards__wrap">
+          <div class="portfolio-cards__item">
+            <img src="images/pic04.jpg" class="portfolio-cards__img"/>
+            <p class="portfolio-cards__title">Magna Nullam</p>
+          </div>
+        </div>
+        <div class="portfolio-cards__wrap">
+          <div class="portfolio-cards__item">
+            <img src="images/pic05.jpg" class="portfolio-cards__img"/>
+            <p class="portfolio-cards__title">Dolor Penatibus</p>
+          </div>
+          <div class="portfolio-cards__item">
+            <img src="images/pic06.jpg" class="portfolio-cards__img"/>
+            <p class="portfolio-cards__title">Orci Convallis</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="content about-me" id="about-me">
+      <h2 class="content__header">
+        About Me
+      </h2>
+      <img class="about-me__img" src="styles/images/pic08.jpg" />
+      <p class="content__text">
+        Tincidunt eu elit diam magnis pretium accumsan etiam id urna.
+        Ridiculus ultricies curae quis et rhoncus velit.
+        Lobortis elementum aliquet nec vitae laoreet eget cubilia quam
+        non etiam odio tincidunt montes. Elementum sem parturient nulla
+        quam placerat viverra mauris non cum elit tempus ullamcorper dolor.
+        Libero rutrum ut lacinia donec curae mus vel quisque sociis nec
+        ornare iaculis.
+      </p>
+
+
+    </div>
+    <div class="content contact" id="contact">
+      <h2 class="content__header">
+        Contact
+      </h2>
+      <p class="content__text">
+        Elementum sem parturient nulla quam placerat viverra mauris non
+         cum elit tempus ullamcorper dolor. Libero rutrum ut lacinia
+          donec curae mus. Eleifend id porttitor ac ultricies lobortis
+           sem nunc orci ridiculus faucibus a consectetur. Porttitor
+           curae mauris urna mi dolor.
+      </p>
+      <form class="contact-form">
+        <div class="contact-form__inputs">
+          <input class="contact-form__input" placeholder="Name"/>
+          <input class="contact-form__input" placeholder="Email"/>
+        </div>
+        <textarea class="contact-form__textarea" placeholder="Message"></textarea>
+        <button class="contact__button button">Send Message</button>
+      </form>
+
+    </div>
+  </main>
+</div>
+
+</body>
+</html>
+-->
