[yk_html-css-part-1] Change difficult selectors to simple

--- a/classworks/yegor-koren/02_html_css_part_1/index.html
+++ b/classworks/yegor-koren/02_html_css_part_1/index.html
@@ -11,109 +11,109 @@
       <div class="introduce">
         <img class="avatar" src="img/avatar.jpg" alt="avatar" width="48" height="48">
         <div class="name-job-position">
-          <p>Jane Doe</p>
-          <p>Hyperspace Engineer</p>
+          <p class="name">Jane Doe</p>
+          <p class="job-position">Hyperspace Engineer</p>
         </div>
       </div>
       <a href="#intro">
         <div class="menu-item">
-          <div class="fa fa-home"></div>
-          <div><p>Intro</p></div>
+          <div class="fa fa-home icon"></div>
+          <div class="item"><p>Intro</p></div>
         </div>
       </a>
       <a href="#portfolio">
         <div class="menu-item">
-          <div class="fa fa-th"></div>
-          <div><p>Portfolio</p></div>
+          <div class="fa fa-th icon"></div>
+          <div class="item"><p>Portfolio</p></div>
         </div>
       </a>
       <a href="#intro">
         <div class="menu-item">
-          <div class="fa fa-user"></div>
-          <div><p>About Me</p></div>
+          <div class="fa fa-user icon"></div>
+          <div class="item"><p>About Me</p></div>
         </div>
       </a>
       <a href="#contact">
         <div class="menu-item">
-          <div class="fa fa-envelope"></div>
-          <div><p>Contact</p></div>
+          <div class="fa fa-envelope icon"></div>
+          <div class="item"><p>Contact</p></div>
         </div>
       </a>
       <div class="nav-footer">
-        <div class="fa fa-twitter"></div>
-        <div class="fa fa-facebook"></div>
-        <div class="fa fa-github"></div>
-        <div class="fa fa-dribbble"></div>
-        <div class="fa fa-envelope"></div>
+        <div class="footer-icon fa fa-twitter"></div>
+        <div class="footer-icon fa fa-facebook"></div>
+        <div class="footer-icon fa fa-github"></div>
+        <div class="footer-icon fa fa-dribbble"></div>
+        <div class="footer-icon fa fa-envelope"></div>
       </div>
     </nav>
     <section class="section section1" id="intro">
-        <p>Hi! I'm <span>Prologue</span>, a <span>free</span> responsive site te
-          mplate designed by <span>HTML5 UP</span>.</p>
-        <p>Ligula scelerisque justo sem accumsan diam quis vitae natoque dictum
+        <p class="large-paragraph">Hi! I'm <span class="span">Prologue</span>, a <span class="span dashed-span">free</span> responsive site te
+          mplate designed by <span class="span dashed-span">HTML5 UP</span>.</p>
+        <p class="small-paragraph">Ligula scelerisque justo sem accumsan diam quis vitae natoque dictum
           sollicitudin elementum.</p>
-      <form action="" method="get">
+      <form class="form" action="" method="get">
         <input class="button" type="submit" name="section1-button" value="Magna Aliquam">
       </form>
     </section>
     <section class="section section2" id="portfolio">
-      <h1>Portfolio</h1>
-      <p>Vitae natoque dictum etiam semper magnis enim feugiat convallis
+      <h1 class="header">Portfolio</h1>
+      <p class="paragraph">Vitae natoque dictum etiam semper magnis enim feugiat convallis
         convallis egestas rhoncus ridiculus in quis risus amet curabitur tempor
        orci penaribus. Tellus erat mauris ipsum fermentum etiam vivamus eget.
        Nunc nibh morbi quis fasce hendreit lacus ridiculus.</p>
       <div class="row">
         <div class="column">
           <div class="figure">
-            <img src="img/pic02.jpg">
-            <p>Ipsum Reugiat</p>
+            <img class="figure-img" src="img/pic02.jpg">
+            <p class="figure-caption">Ipsum Reugiat</p>
           </div>
         </div>
         <div class="column">
           <div class="figure">
-            <img src="img/pic04.jpg">
-            <p>Magna Nullam</p>
+            <img class="figure-img" src="img/pic04.jpg">
+            <p class="figure-caption">Magna Nullam</p>
           </div>
         </div>
         <div class="column">
           <div class="figure">
-            <img src="img/pic06.jpg">
-            <p>Dolor Penatibus</p>
+            <img class="figure-img" src="img/pic06.jpg">
+            <p class="figure-caption">Dolor Penatibus</p>
           </div>
         </div>
       </div>
       <div class="row">
         <div class="column">
           <div class="figure">
-            <img src="img/pic03.jpg">
-            <p>Reugiat Ipsum</p>
+            <img class="figure-img" src="img/pic03.jpg">
+            <p class="figure-caption">Reugiat Ipsum</p>
           </div>
         </div>
         <div class="column">
           <div class="figure">
-            <img src="img/pic05.jpg">
-            <p>Nullam Magna</p>
+            <img class="figure-img" src="img/pic05.jpg">
+            <p class="figure-caption">Nullam Magna</p>
           </div>
         </div>
         <div class="column">
           <div class="figure">
-            <img src="img/pic07.jpg">
-            <p>Penatibus Dolor</p>
+            <img class="figure-img" src="img/pic07.jpg">
+            <p class="figure-caption">Penatibus Dolor</p>
           </div>
         </div>
       </div>
     </section>
     <section class="section section3" id="contact">
-      <h1>Contact</h1>
-      <p>Elementum sem parturient nulla quam placerat viverra mauris non cim
+      <h1 class="header">Contact</h1>
+      <p class="paragraph">Elementum sem parturient nulla quam placerat viverra mauris non cim
         elit tempus ullamcorper dolor. Libero rutrum ut latinia donec curae
         mus. Eleifend id porttitor acc ultricies lobortis sem nunc ridiculus
         faucibus a consectetur. Porttitor curae mauris urna mi dolor</p>
-      <form action="" method="get">
-        <input class="form-name" type="text" name="name" placeholder="Name">
-        <input class="form-email" type="email" name="email" placeholder="Email">
-        <input class="form-message" type="text" name="message" placeholder="Message">
-        <input class="button" type="submit" name="section3-button" value="Send Message">
+      <form class="form" action="" method="get">
+        <input class="section3-input form-name" type="text" name="name" placeholder="Name">
+        <input class="section3-input form-email" type="email" name="email" placeholder="Email">
+        <input class="section3-input form-message" type="text" name="message" placeholder="Message">
+        <input class="section3-input button" type="submit" name="section3-button" value="Send Message">
       </form>
     </section>
   </body>
