Add class show to show menu on mobile

--- a/classworks/pavel-kalugin/03_html-css-part-2/boilerplate/src/index.html
+++ b/classworks/pavel-kalugin/03_html-css-part-2/boilerplate/src/index.html
@@ -12,9 +12,8 @@
 </head>
 
 <body>
-  <aside class="toggle-menu">
-    <i class="toggle-menu__icon fa fa-bars"></i>
-  </aside>
+  <div class="wrapper">
+
   <!-- Sidebar -->
   <aside class="sidebar">
 
@@ -67,9 +66,15 @@
   </aside>
 
 
-
+  <div class="wrapper__content">
   <!-- Intro -->
   <article class="intro" id="intro">
+
+    <!-- Toggle-menu -->
+    <aside class="toggle-menu">
+      <i class="toggle-menu__icon fa fa-bars"></i>
+    </aside>
+
     <h2 class="intro__title">
       Hi! I'm Prologue, a free responsive
       site template designed by HTML5 UP.
@@ -182,5 +187,7 @@
       </p>
     </footer>
   </section>
+  </div>
+  </div>
 </body>
 </html>
