Make class show-menu

--- a/classworks/polina-rudenko/03_htmlcss/pr_03/src/index.html
+++ b/classworks/polina-rudenko/03_htmlcss/pr_03/src/index.html
@@ -7,9 +7,8 @@
   <link rel="stylesheet" href="styles/base/font-awesome.min.css">
   <title>Document</title>
 </head>
-<body class="body">
+<body class="body ">
 
-<div class="page">
    <div class="sidebar">
     <div>
     <div class="sidebar__profile">
@@ -39,6 +38,7 @@
       </li>
     </ul>
   </div>
+     <div class="footer__place">
   <ul class="sidebar__footer">
   <li class="footer__item">  <i class="fa fa-twitter footer__icon"></i> </li>
   <li class="footer__item">  <i class="fa fa-facebook footer__icon"></i></li>
@@ -46,10 +46,14 @@
   <li class="footer__item">  <i class="fa fa-dribbble footer__icon"></i></li>
   <li class="footer__item">  <i class="fa fa-envelope footer__icon"></i></li>
   </ul>
-</div> 
+</div>
+</div>
 
 
 <div class="content">
+  <div class="menu-button">
+   <i class="fa fa-bars"></i>
+  </div>
 
   <div class="intro" id="Intro">
     <div class="intro__content">
@@ -119,6 +123,5 @@
    </div>
   </div>
 </div>
-  </div>
 </body>
 </html>
